Fix issue with fdm price causing overflow beyond viewport

--- a/assets/src/less/plugins/food-and-drink-menu.less
+++ b/assets/src/less/plugins/food-and-drink-menu.less
@@ -42,7 +42,6 @@
 }
 
 .fdm-item-title,
-.fdm-item-price-wrapper,
 .fdm-item-content,
 .fdm-menu-item-flags {
     padding-right: 6em; // price
@@ -76,7 +75,7 @@
     position: relative;
     float: right;
     top: -1.5em;
-    right: -6em;
+    right: 0;
     text-align: right;
 
     > span {
@@ -180,7 +179,6 @@
     .fdm-item-price-wrapper {
         position: absolute;
         top: 0;
-        right: -6em;
         margin-bottom: 0;
     }
 }
